Menu on mobile fixed

--- a/wp-content/themes/mcp/style.css
+++ b/wp-content/themes/mcp/style.css
@@ -55,3 +55,12 @@ Tags:
 .tml-registration-confirmation {
     margin-top: 20px !important;
 }
+
+@media screen and (max-width: 991px){
+    body .sf-field-taxonomy-product-profile ul li:first-of-type {
+        display: block !important;
+    }
+    body .sf-field-taxonomy-product-profile ul li:nth-child(2) {
+        display: none !important;
+    }
+}
